--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="app">loading...</div>
   <script>
     window.$docsify = {
-      basePath: 'https://xuwuruoshui.github.io/docs',
+      basePath: 'https://xuwuruoshui.github.io/docs/',
       loadSidebar: true,
       loadSidebar: 'sidebar.md',
       subMaxLevel: 5,
