--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
   <script src="//unpkg.com/gitalk/dist/gitalk.min.js"></script>
   <script>
     const gitalk = new Gitalk({
-      clientID: 'Github Application Client ID',
-      clientSecret: 'Github Application Client Secret',
-      repo: 'Github repo',
-      owner: 'Github repo owner',
-      admin: ['Github repo collaborators, only these guys can initialize github issues'],
+      clientID: '4a9e19da4b9d0eac59e3',
+      clientSecret: 'f86fd443725f05e6a0a936dac747234887169a2b',
+      repo: 'docs',
+      owner: 'xuwuruoshui',
+      admin: ['xuwuruoshui'],
       // facebook-like distraction free mode
       distractionFreeMode: false
     })
