--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       search: 'auto',
       disqus: 'shortname',
       pagination: {
-        previousText: '上一章节',
-        nextText: '下一章节',
+        previousText: 'Priview',
+        nextText: 'Next',
         crossChapter: true,
         crossChapterText: true,
       },
