--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         '/': 'cover.md',
         '/zh-cn/': 'cover.md'
       },
+      homepage: 'home.md',
       auto2top: true,
       name: 'M78_MADAO_LAB',
       nameLink: '/',
